# python-app

./: .env  .env.example  Jenkinsfile  MANIFEST.in  README.md  README_MICROSERVICES.md  ai-review.txt  app.py  config.py  db-dump.sql  db_dump.sql  dbdump.sql  docker-compose.yml  flaskapp.service  forms.py  newdump.sql  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main.yml
DB_setup/: 000_create_database.sql  003_create_audit_logs.sql
ai-scripts/: ai_review.py
deployment/: deploy_ec2.sh  nginx.conf  user-service.service  web-frontend.service
k8s-manifest/: db-server.yml  namespace.yml
k8s-manifest/admin-service/: deployment.yml  service.yml
k8s-manifest/auth-service/: deployment.yml  service.yml
k8s-manifest/common/: configmaps.yml  secrets.yml
k8s-manifest/serviceac/: sa-clusterrole.yml  sa-clusterrolebinding.yml  serviceacc.yml
k8s-manifest/user-service/: deployment.yml  service.yml
k8s-manifest/web-frontend/: deployment.yml  service.yml
migrations/: 000_create_database.sql  001_create_admin_users.sql  003_create_sessions.sql  003_create_users.sql
python-app-helm/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values.yaml
python_app/: __main__.py  app.py  config.py  forms.py  models.py  wsgi.py
python_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: ai_review.py  health_check.sh  smoke_test.py  start_all_services.sh  start_user_service.sh  start_web_frontend.sh  stop_all_services.sh
shared/: config.py  utils.py
static/: style.css
tests/: test_app.py
(+44 files in other folders)
